// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TWAMM #claimEarnings gas 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 35874,
}
`;

exports[`TWAMM #executeTWAMMOrders gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 383393,
}
`;

exports[`TWAMM #modifyLongTermOrder gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 40833,
}
`;

exports[`TWAMM #submitLongTermOrder gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 123258,
}
`;

exports[`TWAMM single pool sell tests gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 98083,
}
`;

exports[`TWAMM single pool sell tests gas zeroForOne=false 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 108058,
}
`;
